--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
                         <input class="form-input" type="text">
 
-                        <svg class="icon icon-person contact-icon">
+                        <svg class="icon-person contact-icon">
                           <use xlink:href="./images/icons/symbol-defs.svg#icon-person"></use>
                         </svg>
                       </div>
@@ -125,7 +125,7 @@
                       <div class="modal-icon-box">
                         <input class="form-input" type="text">
 
-                        <svg class="icon icon-phone contact-icon">
+                        <svg class="icon-phone contact-icon">
                           <use xlink:href="./images/icons/symbol-defs.svg#icon-phone"></use>
                         </svg>
                       </div>
@@ -140,7 +140,7 @@
                       <div class="modal-icon-box">
                         <input class="form-input" type="text">
 
-                        <svg class="icon icon-mailbox contact-icon">
+                        <svg class="icon-mailbox contact-icon">
                           <use xlink:href="./images/icons/symbol-defs.svg#icon-mailbox"></use>
                         </svg>
                       </div>
@@ -152,15 +152,15 @@
 
                       <label .class="form-label" for="name">Comment </label>
 
-                      <textarea class="form-input" type="text" placeholder="Text input"></textarea>
+                      <textarea class="form-textarea" type="text" placeholder="Text input"></textarea>
                     </div>
                   </li>
 
                 </ul>
 
-
                 <div class="form-terms">
                   <input type="checkbox" class="form-terms-checkbox">
+                  
                   <p>I accept the terms and conditions of the <a class="form-policy" href="#"> Privacy Policy</a> </p>
                 </div>
                 <button class="form-button" type="submit">Send</button>
