--- a/images/demo-external-svg.html
+++ b/images/demo-external-svg.html
@@ -17,7 +17,17 @@
         <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-person"><use xlink:href="symbol-defs.svg#icon-person"></use></svg><span class="name"> icon-person</span>
+                <svg class="icon icon-close-white"><use xlink:href="symbol-defs.svg#icon-close-white"></use></svg><span class="name"> icon-close-white</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-checkbox"><use xlink:href="symbol-defs.svg#icon-checkbox"></use></svg><span class="name"> icon-checkbox</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-userName"><use xlink:href="symbol-defs.svg#icon-userName"></use></svg><span class="name"> icon-userName</span>
             </div>
         </div>
         <div class="glyph fs1">
