--- a/images/form-icons/demo-external-svg.html
+++ b/images/form-icons/demo-external-svg.html
@@ -17,42 +17,37 @@
         <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-linkedin"><use xlink:href="symbol-defs.svg#icon-linkedin"></use></svg><span class="name"> icon-linkedin</span>
+                <svg class="icon icon-close-white"><use xlink:href="symbol-defs.svg#icon-close-white"></use></svg><span class="name"> icon-close-white</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-facebook"><use xlink:href="symbol-defs.svg#icon-facebook"></use></svg><span class="name"> icon-facebook</span>
+                <svg class="icon icon-close-black"><use xlink:href="symbol-defs.svg#icon-close-black"></use></svg><span class="name"> icon-close-black</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-twitter"><use xlink:href="symbol-defs.svg#icon-twitter"></use></svg><span class="name"> icon-twitter</span>
+                <svg class="icon icon-phone"><use xlink:href="symbol-defs.svg#icon-phone"></use></svg><span class="name"> icon-phone</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-instagram"><use xlink:href="symbol-defs.svg#icon-instagram"></use></svg><span class="name"> icon-instagram</span>
+                <svg class="icon icon-username"><use xlink:href="symbol-defs.svg#icon-username"></use></svg><span class="name"> icon-username</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-astronaut"><use xlink:href="symbol-defs.svg#icon-astronaut"></use></svg><span class="name"> icon-astronaut</span>
+                <svg class="icon icon-email"><use xlink:href="symbol-defs.svg#icon-email"></use></svg><span class="name"> icon-email</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-diagram"><use xlink:href="symbol-defs.svg#icon-diagram"></use></svg><span class="name"> icon-diagram</span>
+                <svg class="icon icon-send"><use xlink:href="symbol-defs.svg#icon-send"></use></svg><span class="name"> icon-send</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-clock"><use xlink:href="symbol-defs.svg#icon-clock"></use></svg><span class="name"> icon-clock</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-antenna"><use xlink:href="symbol-defs.svg#icon-antenna"></use></svg><span class="name"> icon-antenna</span>
+                <svg class="icon icon-check"><use xlink:href="symbol-defs.svg#icon-check"></use></svg><span class="name"> icon-check</span>
             </div>
         </div>
   </div>
