--- a/index.html
+++ b/index.html
@@ -441,9 +441,17 @@
         <div class="modal">
           <div class="modal-design">
             <!--modal close part-->
+
             <div class="form-close">
 
-              <label class="close-label-wrapper">
+              <button type="button" class="button-modal" data-modal-close>
+                <svg class="close-check-icon close-icon-check">
+                  <use xlink:href="./images/form-icons/symbol-defs.svg#icon-close-white"></use>
+                </svg>
+              </button>
+
+
+              <!--     <label class="close-label-wrapper">
 
                 <input type="checkbox" class="form-close-input visually-hidden ">
 
@@ -455,7 +463,7 @@
                 </div>
 
               </label>
-
+-->
             </div>
             <form class="form-content">
 
