--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
         </div>
       </section>
       <!--modal part-->
-      <div class="modal-background">
+      <div class="modal-backdrop is-open">
         <div class="modal">
           <div class="modal-design">
             <!--modal close part-->
