--- a/index.html
+++ b/index.html
@@ -437,14 +437,14 @@
         </div>
       </section>
       <!--modal part-->
-      <div class="modal-backdrop is-open">
+      <div class="modal-backdrop is-open"> <!--is-open-->
         <div class="modal">
           <div class="modal-design">
             <!--modal close part-->
 
             <div class="form-close">
 
-              <button type="button" class="button-modal" data-modal-close>
+              <button type="button" class="button-modal">
                 <svg class="close-check-icon close-icon-check">
                   <use xlink:href="./images/form-icons/symbol-defs.svg#icon-close-white"></use>
                 </svg>
